# resoftai-cli

./: .dockerignore  .env.deepseek.example  .env.development  .env.enterprise.example  .env.example  .env.production  .env.production.example  .env.sqlite  .gitignore  .pylintrc  BACKEND_SETUP.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEEPSEEK_TEST_REPORT.md  DEEPSEEK_USAGE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY_SUMMARY.md  DEVELOPMENT.md  DEVELOPMENT_PROGRESS.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  GITHUB_RELEASE_v0.2.2.md  KNOWN_ISSUES.md  Makefile  NEW_FEATURES.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.2.2.md  ROADMAP.md  SECURITY_FIXES.md  SESSION_SUMMARY.md  SYSTEM_STATUS.md  TESTING.md  TEST_COVERAGE_REPORT.md  alembic.ini  demo_deepseek_development.py  deploy-k8s.sh  deploy.sh  (+16 more)
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 002_add_enterprise_features.py  003_add_ai_analysis_features.py  003_add_performance_monitoring.py  add_performance_indexes.py
deployment/docker/: Dockerfile.production  docker-compose.production.yml  nginx.conf
deployment/kubernetes/: deployment.yaml
deployment/monitoring/: docker-compose.monitoring.yml  prometheus.yml
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile  nginx.conf
docs/: AI_CAPABILITIES.md  API_DOCUMENTATION.md  API_INTEGRATION_SUMMARY.md  API_REFERENCE.md  API_REFERENCE_PART2.md  API_REFERENCE_PART3.md  COLLABORATIVE_EDITING.md  COMMUNITY_CONTRIBUTIONS.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_SUMMARY.md  ENHANCEMENTS_SUMMARY.md  ENTERPRISE.md  FEATURE_SUMMARY.md  FRONTEND_COLLABORATIVE_EDITING.md  FRONTEND_TESTING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MOBILE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION.md  PLUGIN_MARKETPLACE.md  PROJECT_STATUS_2025-11-14.md  QUICKSTART.md  QUICKSTART_PERFORMANCE.md  TEST_COVERAGE_IMPROVEMENTS.md  USER_GUIDE.md  USER_MANUAL.md  architecture.md  development-summary.md  development-tasks.md  docker-deployment.md  feature-planning-analysis.md  multi-model-support.md  next-development-plan.md  quickstart.md  template-community-system.md
examples/: custom_agent_example.py  example_usage.py
examples/plugins/code_formatter/: README.md  formatter_plugin.py  plugin.json
examples/plugins/security-scanner/: README.md  main.py  plugin.json
examples/plugins/slack-integration/: main.py  plugin.json
examples/templates/: fastapi_microservice.py  react_fastapi_fullstack.py
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.js  vite.config.js
frontend/admin/: README.md  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: client.js  codeQuality.js  organizations.js  performance.js  projects.js  teams.js  templates.js
frontend/src/components/: ActiveUsers.vue  CodeQualityReport.vue  CollaborationNotification.vue  FileEditor.vue  MonacoEditor.vue  PageHeader.vue  RealtimeLog.vue  StatCard.vue
frontend/src/router/: index.js
frontend/tests/: README.md  setup.js
kubernetes/: backend.yaml  frontend.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secrets.yaml
scripts/: deploy_production.sh  docker-start.sh  init-dev-db.sql  init_db.py  monitor_performance.py  setup_performance.sh  setup_production_db.sh  setup_ssl.sh  start_all.sh  start_backend.sh  start_frontend.sh  validate_system.py
src/resoftai/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_agent_architect.py  test_agent_developer.py  test_agent_integration.py  test_agents.py  test_api_agent_activities.py  test_api_auth.py  test_api_code_analysis.py  test_api_code_quality.py  test_api_execution.py  test_api_files.py  test_api_integration.py  test_api_llm_configs.py  test_api_projects.py  test_api_templates.py  test_api_templates_simple.py  test_auth_security.py  test_code_quality.py  test_collaborative_editing.py  test_config.py  test_core.py  test_core_linter.py  test_core_message_bus.py  test_core_state.py  test_crud_file.py  test_crud_file_mock.py  test_crud_project.py  test_crud_user.py  test_db_connection.py  test_enhanced_agents.py  test_frontend_integration.py  test_generators.py  test_generators_advanced.py  test_integration.py  test_linter_service.py  test_linter_service_standalone.py  test_llm_factory.py  test_optimized_workflow.py  (+12 more)
tests/ai/: __init__.py  test_code_reviewer.py  test_multi_model_coordinator.py  test_predictive_analyzer.py
tests/api/: conftest.py  test_organizations.py  test_plugins.py  test_teams.py
tests/enterprise/: test_enterprise_edge_cases.py  test_organizations.py  test_teams.py
tests/load/: README.md  locustfile.py  websocket_load_test.py
tests/performance/: README.md  analyze_results.py  loadtest.py  locustfile.py  performance_config.py  requirements.txt  run_performance_tests.sh  websocket_test.py
tests/plugins/: test_hooks.py  test_plugin_crud.py  test_plugin_edge_cases.py  test_plugin_manager.py
(+200 files in other folders)
